# cppcli

./: CMakeLists.txt  README.md  build.sh
include/: Class.hpp  Color.hpp  Colour.hpp  Utils.hpp
src/: Class.cpp  Color.cpp  Colour.cpp  Utils.cpp  main.cpp
